# webapp_template

./: .gitignore  README.md  package-lock.json
backend/: Cargo.toml
backend/migrations/00000000000000_create_users/: up.sql
backend/migrations/00000000000001_create_refresh_tokens/: up.sql
backend/src/: config.rs  main.rs
backend/src/api/: auth.rs  mod.rs
backend/src/auth/: jwt.rs  middleware.rs  mod.rs  password.rs
backend/src/db/: mod.rs  schema.rs
backend/src/models/: mod.rs  refresh_token.rs  user.rs
frontend/: package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
frontend/e2e/: app.spec.ts  example.spec.ts
frontend/src/: App.test.tsx  App.tsx  index.css
frontend/src/api/: auth.ts
frontend/src/components/: LoginForm.tsx  RegisterForm.tsx
frontend/src/components/ui/: button.test.tsx  button.tsx  card.test.tsx  card.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: utils.test.ts
scripts/: dev.sh
